--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "private": true,
   "version": "1.0.0",
   "type": "module",
-
   "packageManager": "npm@10.9.2",
-
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -13,8 +11,8 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
-
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
@@ -65,7 +63,6 @@
     "vaul": "^0.9.3",
     "zod": "^4.0.5"
   },
-
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@tailwindcss/typography": "^0.5.15",
