--- a/.gitignore
+++ b/.gitignore
@@ -26,8 +26,6 @@ dist-ssr
 *.sln
 *.sw?
 
-# Large video files
-public/images/video 1.mp4
-public/images/video 6.mp4
-public/images/video 7.mp4
+# Large video files - All video files excluded
+public/images/video *.mp4
 *.mp4
